password change functionality

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="icon"  href="/Election-Commission_Logo.png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Election Commission Of India</title>
+    <title>Survey Application</title>
   </head>
   <body>
     <div id="root"></div>
